<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.lezai</groupId>
        <artifactId>common-utils</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>

    <artifactId>common-thread-pool</artifactId>
    <packaging>pom</packaging>
    <name>common-thread-pool</name>
    <description>动态线程池管理组件</description>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <modules>
        <module>core</module>
        <module>admin-server</module>
        <module>client-sdk</module>
        <module>thread-pool-spring-boot-starter</module>
        <module>samples</module>
    </modules>
</project>
